--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-community/google-signin": "^3.0.3",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-fs": "^2.16.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-google-drive-api-wrapper": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.5",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.2"
