--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "mobx-react": "^6.1.4",
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-native-fs": "^2.16.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-google-drive-api-wrapper": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.5",
@@ -24,9 +23,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/runtime": "^7.6.3",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.3",
@@ -34,5 +35,15 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "babel": {
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
   }
 }
