--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mobx-react": "^6.1.4",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-fs": "^2.16.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-google-drive-api-wrapper": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.5",
